...
                      final sessionToken = const Uuid().v1();
                      showSearch(
                          context: context,
                          delegate: LocationSearchPage(sessionToken, store));
                    }),

                //Back
                ButtonWidget(
                    text: "Back",
                    color: "light",
                    border: "white",
                    function: vm.popPage)
              ],
...
