...

                  //**********TABS TO FILTER ACTIVE/SHORTLISTED BIDS***********//
                  Row(
                    mainAxisAlignment: MainAxisAlignment.center,
                    children: [
                      TabWidget(
                        text: "ACTIVE",
                        onPressed: (activate) =>
                            vm.dispatchToggleViewBidsAction(false, activate),
                      ),
                      const Padding(padding: EdgeInsets.all(5)),
                      TabWidget(
                        text: "SHORTLIST",
                        onPressed: (activate) =>
                            vm.dispatchToggleViewBidsAction(true, activate),
                      ),
                    ],
                  ),
                  //***********************************************************//
...
