...
      : super(key: key);

  final List<String> items = const [
    'Disrespectful or offensive behaviour',
    'Threatening violence or physical harm',
    'Prejudice or discrimination',
    'Harrassment',
    'Not who they say they are',
  ];
  @override
  State<ReportPage> createState() => _RadioSelectWidgetState();
}

...
                                    displayToastError(context,
                                        "Reason and description must be included.");
                                  }
                                })
                            //IF AN ADVERT IS BEING REPORTED
                            : LongButtonWidget(
                                text: "Submit Job Report",
                                function: () {
                                  if (descrController.value.text.isNotEmpty &&
                                      _type != null) {
                                    displayToastSuccess(context,
                                        "Your report has been submitted");
                                    vm.popPage();
...
