...
                    AppBarWidget(
                      title: "JOB INFO",
                      store: store,
                      filterActions: AppbarPopUpMenuWidget(
                        store: store,
                        functions: {
                          "Report Advert": () {
                            Navigator.push(
                              context,
                              MaterialPageRoute(
                                builder: (context) => ReportPage(
                                  store: store,
                                  reportType: "Advert",
...
