...
      ),
      //***********************buttons******************** */
      actions: [
        Center(
          child: Column(
            children: [
              ButtonWidget(text: "Submit", function: _submit),
              const Padding(padding: EdgeInsets.all(5)),
              ButtonWidget(
                text: "Cancel",
                function: _cancel,
                color: "light",
                border: "lightBlue",
...
