import 'package:consumer/widgets/rating_stars.dart';
import 'package:flutter/material.dart';
import 'package:flutter_test/flutter_test.dart';
import 'package:integration_test/integration_test.dart';
import 'package:app/main.dart' as app;

void main() {
  //make sure service is initialized first to run on device
  IntegrationTestWidgetsFlutterBinding.ensureInitialized();

  testWidgets("Consumer Close Job", (WidgetTester tester) async {
    app.main(); //start the app from the main function
    await tester.pumpAndSettle();

    //storing constants used to login as consumer
    const email = "fiwij93949@orlydns.com";
    const passowrd = "@Aa12345";

    //get the widgets to enter text and login button
    var email_ = find.widgetWithText(TextFormField, "email");
    expect(email_, findsOneWidget);
    var password_ = find.widgetWithText(TextFormField, "password");
    expect(password_, findsOneWidget);
    var login = find.widgetWithText(ElevatedButton, "Login");
    expect(login, findsOneWidget);

    //now entering the values in the fields
    await tester.enterText(email_, email);
    await tester.pumpAndSettle();

    await tester.enterText(password_, passowrd);
    await tester.pumpAndSettle();

    //scrolling a bit
    await tester.dragUntilVisible(
        login, find.byType(Scaffold), const Offset(0.0, 300));
    await tester.pumpAndSettle();

    //now clicking the login button
    await tester.tap(login);
    await tester.pumpAndSettle();

    await Future.delayed(const Duration(seconds: 3), () {});

    await tester.tap(find.text("IN PROGRESS"));
    await tester.pumpAndSettle();

    await tester.tap(find.text("Integration Test"));
    await tester.pumpAndSettle();

    //close the job as complete and give review
    await tester.tap(find.text("Close"));
    await tester.pumpAndSettle();

    await tester.tap(find.byType(StarRating)); //rate tradesman
    await tester.pumpAndSettle();

    await tester.enterText(
        find.byType(TextFormField), "Nice Job!"); //give a description
    await tester.pumpAndSettle();

    await tester.dragUntilVisible(
        find.text("Submit"), find.byType(Scaffold), const Offset(0.0, 300));
    await tester.pumpAndSettle();

    await tester.tap(find.text("Submit"));
    await tester.pumpAndSettle();
  });
}
